--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-<h1>Welcome to my github Profile</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Pradeep | Advanced Pro Portfolio</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+</head>
+<body class="bg-black text-white font-sans scroll-smooth">
+
+  <!-- HERO -->
+  <section class="h-screen flex flex-col justify-center items-center bg-gradient-to-br from-purple-900 via-black to-blue-900">
+    <h1 class="text-5xl md:text-7xl font-bold">Pradeep Jaiswal</h1>
+    <p class="text-xl mt-4 text-gray-300">AI Engineer | FinTech | Hackathon Specialist | Creator of @TheCodeDesk</p>
+    <a href="#events" class="mt-6 bg-purple-700 px-6 py-3 rounded-full text-white hover:bg-purple-800 transition">Explore Events</a>
+  </section>
+
+  <!-- ABOUT -->
+  <section class="py-20 px-6 md:px-20" id="about" data-aos="fade-up">
+    <h2 class="text-4xl font-bold mb-6">About Me</h2>
+    <p class="text-gray-300 text-lg">I'm a B.Tech AI & DS student, exploring Data Science, FinTech, and AI-powered tools. I build real-world solutions, participate in hackathons, and share knowledge via TheCodeDesk and Medium.</p>
+  </section>
+
+  <!-- PROJECTS -->
+  <section class="py-20 px-6 md:px-20 bg-gray-900" id="projects" data-aos="fade-up">
+    <h2 class="text-4xl font-bold mb-6">Highlighted Projects</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+      <!-- Card 1 -->
+      <div class="bg-gray-800 p-6 rounded-xl shadow-lg">
+        <h3 class="text-2xl font-semibold">AI Surveillance for Women Safety</h3>
+        <p class="text-gray-400 mt-2">Real-time alerting, SOS gesture recognition, geolocation tracking, and emergency integrations.</p>
+      </div>
+      <!-- Card 2 -->
+      <div class="bg-gray-800 p-6 rounded-xl shadow-lg">
+        <h3 class="text-2xl font-semibold">AI-Based Timetable Generator</h3>
+        <p class="text-gray-400 mt-2">Optimized scheduling using ML for faculty, lecture halls, and subjects.</p>
+      </div>
+      <!-- Card 3 -->
+      <div class="bg-gray-800 p-6 rounded-xl shadow-lg">
+        <h3 class="text-2xl font-semibold">Cyberbullying Threat Detection</h3>
+        <p class="text-gray-400 mt-2">Deep learning to monitor social platforms and prevent future crimes.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ADVANCED PRO EVENTS -->
+  <section class="py-20 px-6 md:px-20 bg-black" id="events" data-aos="fade-up">
+    <h2 class="text-4xl font-bold mb-6">Advanced Pro Events</h2>
+    <div class="space-y-6">
+      <div class="bg-gradient-to-r from-purple-800 to-indigo-900 p-6 rounded-lg shadow-lg animate-pulse">
+        <h3 class="text-2xl font-semibold">HackVerse 2025 – Mumbai</h3>
+        <p class="text-gray-300">Built a Fintech AI solution to forecast investments in real-time.</p>
+        <span class="text-sm text-gray-400">March 2025</span>
+      </div>
+      <div class="bg-gradient-to-r from-blue-700 to-teal-800 p-6 rounded-lg shadow-lg animate-pulse">
+        <h3 class="text-2xl font-semibold">TCET Green Club - Smart Campus Event</h3>
+        <p class="text-gray-300">Spearheaded eco-AI initiatives, monitored carbon data, and launched an air quality app.</p>
+        <span class="text-sm text-gray-400">April 2025</span>
+      </div>
+      <!-- Add more dynamically -->
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section class="py-20 px-6 md:px-20 bg-gray-900" id="contact" data-aos="fade-up">
+    <h2 class="text-4xl font-bold mb-6">Contact Me</h2>
+    <p class="text-gray-400">Reach out via <a href="mailto:your@email.com" class="text-purple-400 underline">email</a> or connect on <a href="https://www.instagram.com/TheCodeDesk" class="text-purple-400 underline">Instagram</a>.</p>
+  </section>
+
+  <!-- FOOTER -->
+  <footer class="text-center py-10 text-gray-500">
+    © 2025 Pradeep Jaiswal | Powered by GitHub Pages
+  </footer>
+
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>AOS.init();</script>
+</body>
+</html>
+
