--- a/index.html
+++ b/index.html
@@ -3,78 +3,122 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pradeep | Advanced Pro Portfolio</title>
+  <title>Pradeep Jaiswal | AI & DS Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+  <style>
+    #particles-js {
+      position: absolute;
+      width: 100%;
+      height: 100vh;
+      z-index: -1;
+    }
+  </style>
 </head>
-<body class="bg-black text-white font-sans scroll-smooth">
+<body class="bg-black text-white scroll-smooth font-sans">
 
-  <!-- HERO -->
-  <section class="h-screen flex flex-col justify-center items-center bg-gradient-to-br from-purple-900 via-black to-blue-900">
-    <h1 class="text-5xl md:text-7xl font-bold">Pradeep Jaiswal</h1>
-    <p class="text-xl mt-4 text-gray-300">AI Engineer | FinTech | Hackathon Specialist | Creator of @TheCodeDesk</p>
-    <a href="#events" class="mt-6 bg-purple-700 px-6 py-3 rounded-full text-white hover:bg-purple-800 transition">Explore Events</a>
-  </section>
+<!-- PARTICLE BACKGROUND -->
+<div id="particles-js"></div>
 
-  <!-- ABOUT -->
-  <section class="py-20 px-6 md:px-20" id="about" data-aos="fade-up">
-    <h2 class="text-4xl font-bold mb-6">About Me</h2>
-    <p class="text-gray-300 text-lg">I'm a B.Tech AI & DS student, exploring Data Science, FinTech, and AI-powered tools. I build real-world solutions, participate in hackathons, and share knowledge via TheCodeDesk and Medium.</p>
-  </section>
+<!-- HERO SECTION -->
+<section class="h-screen flex flex-col justify-center items-center bg-black relative">
+  <h1 class="text-5xl md:text-6xl font-extrabold text-white">Pradeep Jaiswal</h1>
+  <p class="text-xl text-gray-300 mt-4">AI & DS Student | Hackathoner | Data Scientist | FinTech Explorer</p>
+  <a href="#projects" class="mt-6 bg-purple-600 px-6 py-3 rounded-full hover:bg-purple-700 transition">🚀 Explore My Work</a>
+</section>
 
-  <!-- PROJECTS -->
-  <section class="py-20 px-6 md:px-20 bg-gray-900" id="projects" data-aos="fade-up">
-    <h2 class="text-4xl font-bold mb-6">Highlighted Projects</h2>
-    <div class="grid md:grid-cols-3 gap-6">
-      <!-- Card 1 -->
-      <div class="bg-gray-800 p-6 rounded-xl shadow-lg">
-        <h3 class="text-2xl font-semibold">AI Surveillance for Women Safety</h3>
-        <p class="text-gray-400 mt-2">Real-time alerting, SOS gesture recognition, geolocation tracking, and emergency integrations.</p>
-      </div>
-      <!-- Card 2 -->
-      <div class="bg-gray-800 p-6 rounded-xl shadow-lg">
-        <h3 class="text-2xl font-semibold">AI-Based Timetable Generator</h3>
-        <p class="text-gray-400 mt-2">Optimized scheduling using ML for faculty, lecture halls, and subjects.</p>
-      </div>
-      <!-- Card 3 -->
-      <div class="bg-gray-800 p-6 rounded-xl shadow-lg">
-        <h3 class="text-2xl font-semibold">Cyberbullying Threat Detection</h3>
-        <p class="text-gray-400 mt-2">Deep learning to monitor social platforms and prevent future crimes.</p>
-      </div>
+<!-- ABOUT ME -->
+<section id="about" class="px-6 md:px-20 py-20" data-aos="fade-up">
+  <h2 class="text-4xl font-bold mb-4">👨‍💻 About Me</h2>
+  <p class="text-gray-300 text-lg leading-relaxed">
+    I'm an enthusiastic tech explorer pursuing B.Tech in Artificial Intelligence & Data Science at TCET, Mumbai.
+    Passionate about solving real-world problems using AI, Data Science, and Machine Learning. From hackathons to dashboards,
+    I create efficient, scalable, and people-friendly solutions.
+  </p>
+  <div class="mt-6">
+    <a href="Deep Purple Professional College Student CV Resume.pdf" download class="bg-blue-700 px-5 py-2 rounded-lg hover:bg-blue-800 transition">📄 Download Resume</a>
+  </div>
+</section>
+
+<!-- TECH STACK -->
+<section class="px-6 md:px-20 py-20 bg-gray-900" data-aos="fade-up">
+  <h2 class="text-4xl font-bold mb-6">🛠 Tech Stack</h2>
+  <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center text-gray-300">
+    <div class="hover:text-white">Python</div>
+    <div class="hover:text-white">C++</div>
+    <div class="hover:text-white">Machine Learning</div>
+    <div class="hover:text-white">Deep Learning</div>
+    <div class="hover:text-white">Power BI</div>
+    <div class="hover:text-white">Tableau</div>
+    <div class="hover:text-white">R</div>
+    <div class="hover:text-white">PostgreSQL</div>
+    <div class="hover:text-white">Google Colab</div>
+    <div class="hover:text-white">DBMS</div>
+  </div>
+</section>
+
+<!-- PROJECTS -->
+<section id="projects" class="px-6 md:px-20 py-20" data-aos="fade-up">
+  <h2 class="text-4xl font-bold mb-6">📁 Projects</h2>
+  <div class="grid md:grid-cols-3 gap-8">
+    <div class="bg-gray-800 p-6 rounded-xl shadow-lg">
+      <h3 class="text-xl font-semibold mb-2">AI-Powered Schedule Generator</h3>
+      <p class="text-gray-400">Auto-generates optimized academic timetables using AI and constraints.</p>
     </div>
-  </section>
-
-  <!-- ADVANCED PRO EVENTS -->
-  <section class="py-20 px-6 md:px-20 bg-black" id="events" data-aos="fade-up">
-    <h2 class="text-4xl font-bold mb-6">Advanced Pro Events</h2>
-    <div class="space-y-6">
-      <div class="bg-gradient-to-r from-purple-800 to-indigo-900 p-6 rounded-lg shadow-lg animate-pulse">
-        <h3 class="text-2xl font-semibold">HackVerse 2025 – Mumbai</h3>
-        <p class="text-gray-300">Built a Fintech AI solution to forecast investments in real-time.</p>
-        <span class="text-sm text-gray-400">March 2025</span>
-      </div>
-      <div class="bg-gradient-to-r from-blue-700 to-teal-800 p-6 rounded-lg shadow-lg animate-pulse">
-        <h3 class="text-2xl font-semibold">TCET Green Club - Smart Campus Event</h3>
-        <p class="text-gray-300">Spearheaded eco-AI initiatives, monitored carbon data, and launched an air quality app.</p>
-        <span class="text-sm text-gray-400">April 2025</span>
-      </div>
-      <!-- Add more dynamically -->
+    <div class="bg-gray-800 p-6 rounded-xl shadow-lg">
+      <h3 class="text-xl font-semibold mb-2">Spotify Dashboard</h3>
+      <p class="text-gray-400">Power BI Dashboard analyzing Spotify trends, behavior, and genres.</p>
     </div>
-  </section>
+    <div class="bg-gray-800 p-6 rounded-xl shadow-lg">
+      <h3 class="text-xl font-semibold mb-2">Traffic Accident Analysis</h3>
+      <p class="text-gray-400">Visualizing accident hotspots and contributing factors in traffic data.</p>
+    </div>
+  </div>
+</section>
 
-  <!-- CONTACT -->
-  <section class="py-20 px-6 md:px-20 bg-gray-900" id="contact" data-aos="fade-up">
-    <h2 class="text-4xl font-bold mb-6">Contact Me</h2>
-    <p class="text-gray-400">Reach out via <a href="mailto:your@email.com" class="text-purple-400 underline">email</a> or connect on <a href="https://www.instagram.com/TheCodeDesk" class="text-purple-400 underline">Instagram</a>.</p>
-  </section>
+<!-- HACKATHONS -->
+<section id="events" class="px-6 md:px-20 py-20 bg-gray-950" data-aos="fade-up">
+  <h2 class="text-4xl font-bold mb-6">🏆 Hackathons & Achievements</h2>
+  <div class="space-y-6">
+    <div class="bg-gradient-to-r from-purple-700 to-indigo-800 p-6 rounded-lg">
+      <h3 class="text-2xl font-semibold">National Hackathon 4.0</h3>
+      <p class="text-gray-300">Second Runner-up | Real-time Chat Application using ML.</p>
+    </div>
+    <div class="bg-gradient-to-r from-blue-700 to-teal-700 p-6 rounded-lg">
+      <h3 class="text-2xl font-semibold">ML Hackathon</h3>
+      <p class="text-gray-300">Top 5% | ML-based auto-tagging system.</p>
+    </div>
+    <div class="bg-gradient-to-r from-pink-700 to-yellow-600 p-6 rounded-lg">
+      <h3 class="text-2xl font-semibold">Indian Art Fest</h3>
+      <p class="text-gray-300">Runner-up among 1000+ entries nationwide.</p>
+    </div>
+  </div>
+</section>
 
-  <!-- FOOTER -->
-  <footer class="text-center py-10 text-gray-500">
-    © 2025 Pradeep Jaiswal | Powered by GitHub Pages
-  </footer>
+<!-- BLOGS -->
+<section id="blogs" class="px-6 md:px-20 py-20" data-aos="fade-up">
+  <h2 class="text-4xl font-bold mb-6">📝 Articles & Blogs</h2>
+  <p class="text-gray-400 mb-4">I post tech tutorials and productivity hacks weekly.</p>
+  <a href="https://www.instagram.com/TheCodeDesk" target="_blank" class="underline text-purple-400 hover:text-purple-200">📲 Follow @TheCodeDesk</a>
+</section>
 
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init();</script>
+<!-- CONTACT -->
+<section id="contact" class="py-20 px-6 md:px-20 bg-gray-900" data-aos="fade-up">
+  <h2 class="text-4xl font-bold mb-6">📬 Contact</h2>
+  <p class="text-gray-400">📧 Email: <a href="mailto:pradeepkumarjaiswal605@gmail.com" class="text-blue-400 underline">pradeepkumarjaiswal605@gmail.com</a></p>
+  <p class="text-gray-400">🔗 LinkedIn: <a href="https://www.linkedin.com/in/pradepjswl-b34688287/" target="_blank" class="text-blue-400 underline">linkedin.com/in/pradepjswl</a></p>
+</section>
+
+<!-- FOOTER -->
+<footer class="text-center py-10 text-gray-500">
+  © 2025 Pradeep Jaiswal | Built with 💙 using GitHub Pages
+</footer>
+
+<script>AOS.init();</script>
+<script>
+  particlesJS.load('particles-js', 'https://cdn.jsdelivr.net/gh/VincentGarreau/particles.js/particles.json');
+</script>
 </body>
 </html>
-
